<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.way.ore_power.viewmodel.state.LoginRegisterViewModel" />

        <variable
            name="click"
            type="com.way.ore_power.ui.activity.ForgetPasswordActivity.ProxyClick" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg">

        <ImageView
            android:id="@+id/iv_bg_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:background="@drawable/login_bg_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_forget_password"
            android:textColor="@color/color_white"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/ll_edit"
            app:layout_constraintTop_toTopOf="@+id/iv_bg_edit"
            app:layout_constraintBottom_toTopOf="@id/ll_edit"/>

        <LinearLayout
            android:id="@+id/ll_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="60dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/iv_bg_edit"
            app:layout_constraintEnd_toEndOf="@+id/iv_bg_edit"
            app:layout_constraintTop_toTopOf="@+id/iv_bg_edit"
            app:layout_constraintBottom_toBottomOf="@+id/iv_bg_edit">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/shape_radius20_white"
                android:gravity="center_vertical"
                app:layout_constraintStart_toStartOf="@+id/iv_bg_edit"
                app:layout_constraintEnd_toEndOf="@+id/iv_bg_edit">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_mobile"
                    android:textColor="@color/color_FF000000"
                    android:textSize="13sp"
                    android:gravity="center"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="17dp"
                    android:background="@color/color_FFD3D3D3"/>
                <EditText
                    android:id="@+id/etMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textSize="13sp"
                    android:hint="@string/text_input_mobile"
                    android:paddingStart="8dp"
                    android:singleLine="true"
                    android:maxLength="11"
                    android:inputType="number"/>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/shape_radius20_white"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@+id/iv_bg_edit"
                app:layout_constraintEnd_toEndOf="@+id/iv_bg_edit">
                <TextView
                    android:id="@+id/tvCodeText"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_code"
                    android:textColor="@color/color_FF000000"
                    android:textSize="13sp"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                <View
                    android:id="@+id/viewLine"
                    android:layout_width="1dp"
                    android:layout_height="17dp"
                    android:background="@color/color_FFD3D3D3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvCodeText"/>
                <EditText
                    android:id="@+id/etCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textSize="13sp"
                    android:hint="@string/text_input_code"
                    android:paddingStart="8dp"
                    android:singleLine="true"
                    android:maxLength="4"
                    android:inputType="number"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/viewLine"/>

                <TextView
                    android:id="@+id/tvGetCode"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/text_get_code"
                    android:textSize="12sp"
                    android:textColor="@color/color_white"
                    android:background="@drawable/shape_radius200_button"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/shape_radius20_white"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@+id/iv_bg_edit"
                app:layout_constraintEnd_toEndOf="@+id/iv_bg_edit">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_password"
                    android:textColor="@color/color_FF000000"
                    android:textSize="13sp"
                    android:gravity="center"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="17dp"
                    android:background="@color/color_FFD3D3D3"/>
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textSize="13sp"
                    android:hint="@string/text_input_password_tip"
                    android:paddingStart="8dp"
                    android:singleLine="true"
                    android:maxLength="20"
                    android:inputType="textPassword"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/shape_radius20_white"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@+id/iv_bg_edit"
                app:layout_constraintEnd_toEndOf="@+id/iv_bg_edit">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_password_sure"
                    android:textColor="@color/color_FF000000"
                    android:textSize="13sp"
                    android:gravity="center"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="17dp"
                    android:background="@color/color_FFD3D3D3"/>
                <EditText
                    android:id="@+id/etPasswordSure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textSize="13sp"
                    android:hint="@string/text_input_password_tip_sure"
                    android:paddingStart="8dp"
                    android:singleLine="true"
                    android:maxLength="20"
                    android:inputType="textPassword"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/text_submit"
            android:textSize="17sp"
            android:textColor="@color/color_white"
            android:background="@drawable/shape_radius200_button"
            app:layout_constraintTop_toBottomOf="@+id/ll_edit"
            app:layout_constraintBottom_toBottomOf="@+id/iv_bg_edit"
            app:layout_constraintEnd_toEndOf="@+id/ll_edit"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>