<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.way.ore_power.viewmodel.state.LoginRegisterViewModel" />

        <variable
            name="click"
            type="com.way.ore_power.ui.activity.LoginActivity.ProxyClick" />
    </data>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_bg">

            <ImageView
                android:id="@+id/iv_bg_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:background="@drawable/login_bg_card"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_welcome"
                android:textColor="@color/color_white"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/ll_edit"
                app:layout_constraintStart_toStartOf="@id/ll_edit"
                app:layout_constraintTop_toTopOf="@+id/iv_bg_edit" />

            <LinearLayout
                android:id="@+id/ll_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="60dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/iv_bg_edit"
                app:layout_constraintEnd_toEndOf="@+id/iv_bg_edit"
                app:layout_constraintStart_toStartOf="@+id/iv_bg_edit"
                app:layout_constraintTop_toTopOf="@+id/iv_bg_edit">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/shape_radius20_white"
                    android:gravity="center_vertical"
                    app:layout_constraintEnd_toEndOf="@+id/iv_bg_edit"
                    app:layout_constraintStart_toStartOf="@+id/iv_bg_edit">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/text_mobile"
                        android:textColor="@color/color_FF000000"
                        android:textSize="13sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="17dp"
                        android:background="@color/color_FFD3D3D3" />

                    <EditText
                        android:id="@+id/etMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/text_input_mobile"
                        android:inputType="number"
                        android:maxLength="11"
                        android:paddingStart="8dp"
                        android:singleLine="true"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_radius20_white"
                    android:gravity="center_vertical"
                    app:layout_constraintEnd_toEndOf="@+id/iv_bg_edit"
                    app:layout_constraintStart_toStartOf="@+id/iv_bg_edit">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/text_password"
                        android:textColor="@color/color_FF000000"
                        android:textSize="13sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="17dp"
                        android:background="@color/color_FFD3D3D3" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/text_input_password"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:paddingStart="8dp"
                        android:singleLine="true"
                        android:textSize="13sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->click.toForgetPassword()}"
                android:padding="20dp"
                android:text="@string/text_forget_password1"
                android:textColor="@color/color_white"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="@+id/ll_edit"
                app:layout_constraintTop_toBottomOf="@+id/ll_edit" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->click.toRegister()}"
                android:padding="20dp"
                android:text="@string/text_register"
                android:textColor="@color/color_white"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@+id/ll_edit"
                app:layout_constraintTop_toBottomOf="@+id/ll_edit" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_radius200_button"
                android:onClick="@{()->click.login()}"
                android:text="@string/text_login"
                android:textColor="@color/color_white"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_bg_edit"
                app:layout_constraintEnd_toEndOf="@+id/ll_edit"
                app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>