<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginTop="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:background="@drawable/shape_radius5_black_frame"
    android:orientation="vertical"
    tools:ignore="MissingConstraints">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="矿池名称AXXX"
        android:textColor="@color/color_white"
        android:textSize="14sp"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:background="@drawable/shape_gradient">

        <TextView
            android:id="@+id/tvChannelNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_channel_name"
            android:textColor="@color/color_white"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvNodeNumText"/>

        <TextView
            android:id="@+id/tvNodeNumText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_node_num"
            android:textColor="@color/color_white"
            android:textSize="11sp"
            app:layout_constraintStart_toEndOf="@+id/tvChannelNameText"
            app:layout_constraintEnd_toStartOf="@+id/tvTimeText"/>

        <TextView
            android:id="@+id/tvTimeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_end_time"
            android:textColor="@color/color_white"
            android:textSize="11sp"
            app:layout_constraintStart_toEndOf="@+id/tvNodeNumText"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvChannelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:text="渠道A（自己）"
            android:textColor="@color/color_white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tvChannelNameText"
            app:layout_constraintTop_toBottomOf="@+id/tvChannelNameText"/>

        <TextView
            android:id="@+id/tvNodeNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:text="100"
            android:textColor="@color/color_white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tvNodeNumText"
            app:layout_constraintTop_toBottomOf="@+id/tvNodeNumText"/>

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:text="2023.06.08"
            android:textColor="@color/color_white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tvTimeText"
            app:layout_constraintTop_toBottomOf="@+id/tvTimeText"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>


