<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/tools">

    <!--<data>
        <variable
            name="user"
            type="wayy.oyyf.viewmodel.state.LoginRegisterViewModel" />

        <variable
            name="click"
            type="wayy.oyyf.ui.activity.LoginActivity.ProxyClick" />
    </data>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_FF1D1D2A">

        <include layout="@layout/include_toolbar" />

        <ImageView
            android:id="@+id/ivInviteBg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/invite_bg"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

        <ImageView
            android:id="@+id/ivQRCode"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:background="@drawable/invite_qr_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivInviteBg"/>

        <TextView
            android:id="@+id/tvInviteLinkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_invite_link"
            android:textColor="@color/color_white"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/ivQRCode"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvInviteLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxEms="7"
            android:singleLine="true"
            android:background="@drawable/shape_radius5_white"
            android:textSize="13sp"
            android:textColor="@color/color_FF333333"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            tools:text="http://chanping.cn/page/rewwerhbdkfgfhijh…"
            app:layout_constraintTop_toBottomOf="@+id/tvInviteLinkText"/>

        <TextView
            android:id="@+id/tvInviteLinkCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_copy"
            android:textColor="@color/color_FFD0A778"
            android:textSize="12sp"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="@+id/tvInviteLink"
            app:layout_constraintBottom_toBottomOf="@+id/tvInviteLink"
            app:layout_constraintEnd_toEndOf="@+id/tvInviteLink"/>

        <TextView
            android:id="@+id/tvInviteCodeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_invite_code_expert"
            android:textColor="@color/color_white"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvInviteLink"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvInviteCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_radius5_white"
            android:textSize="13sp"
            android:textColor="@color/color_FF333333"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            tools:text="873hf"
            app:layout_constraintTop_toBottomOf="@+id/tvInviteCodeText"/>

        <TextView
            android:id="@+id/tvInviteCodeCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_copy"
            android:textColor="@color/color_FFD0A778"
            android:textSize="12sp"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="@+id/tvInviteCode"
            app:layout_constraintBottom_toBottomOf="@+id/tvInviteCode"
            app:layout_constraintEnd_toEndOf="@+id/tvInviteCode"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>